# ChatShadow

./: .gitignore  CMakeLists.txt  README.md  WeChat.cpp  WeChat.h  common.cpp  common.h  main.cpp  status.cpp  status.h  task.cpp  task.h
QQ/: QQ.cpp  QQ.h
WeChat/: WeChat.cpp  WeChat.h
src/: common.cpp  common.h  main.cpp  module.h  scanner.cpp  scanner.h
src/modules/: qq_nt.cpp  qq_nt.h  qq_old.cpp  qq_old.h  wechat.cpp  wechat.h  wechat_v4.cpp  wechat_v4.h  wechat_v4_bin.cpp  wechat_v4_bin.h  wechat_v4_hex.cpp  wechat_v4_hex.h
